--- a/src/style.scss
+++ b/src/style.scss
@@ -4,6 +4,8 @@
 @use 'explore.scss';
 @use 'steps.scss';
 @use 'destinations.scss';
+@use 'stories.scss';
+@use 'copyright.scss';
 
 
 * {
@@ -14,6 +16,40 @@
   text-decoration: none;
   line-height: 100%;
   letter-spacing: 0%;
+  scroll-behavior: smooth;
+}
+
+.top{
+  height:50px;
+  width: 50px;
+  border-radius: 50%;
+  background-color: gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  z-index: 10000;
+  cursor: pointer;
+  transition: .55s;
+  box-shadow: 0 0 10px black;
+  top: 900px;
+  right: 50px;
+}
+
+.top a{
+  color: #fff;
+  font-size: 36px;
+  height:50px;
+  width: 50px;
+  border-radius: 50%;
+  position: relative;
+  left: 15px;
+  top: 5px;
+}
+
+.top:hover{
+  transform: scale(1.1);
+
 }
 
 .container{
@@ -39,8 +75,28 @@ button{
 button:hover{
   transform: scale(1.1);
   background-color: #06525f;
+
 }
 
 button:active{
   transform: scale(1);
 }
+
+.button{
+  padding: 13px 31px;
+  margin-bottom: 5px;
+
+  a{
+      position: relative;
+      top: 4px;
+  }
+
+  a p{
+      display: inline-block;
+      position: relative;
+      bottom: 12px;
+      left: 3px;
+      font-size: 24px;
+  }
+}
+
