--- a/src/explore.scss
+++ b/src/explore.scss
@@ -1,7 +1,10 @@
 .explore {
-    position: absolute;
-    top: 300px;
-    left: 120px;
+    height: 100%;
+    
+    display: flex;
+    align-items: center;
+    margin-left: 120px;
+
 
     &__container {
         height: 450px;
